[fix] white space rule for tables

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -268,7 +268,7 @@ main section table {
 
   @media screen and (min-width: 60em) {
     display: inline-table;
-    white-space: wrap;
+    white-space: initial;
     width: 100%;
   }
 
